test: common 테스트